--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.3",
   "description": "heic 转jpg",
   "bin": {
-    "heic": "bin/heic"
+    "heic": "bin/heic",
+    "h": "bin/heic"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +18,7 @@
     "commands.js",
     "package.json"
   ],
+  "keywords": ["heic"],
   "author": "wj77998@gmail.com",
   "license": "ISC",
   "dependencies": {
@@ -24,5 +26,8 @@
     "fs-extra": "^9.1.0",
     "heic-convert": "^1.2.4",
     "progress": "^2.0.3"
+  },
+  "engines": {
+    "node": ">=8"
   }
 }
